@@ -32,7 +32,7 @@ typedef struct _GtkFileChooser GtkFileChooser;
 class WXDLLIMPEXP_CORE wxGtkFileChooser
 {
 public:
-    wxGtkFileChooser() {}
+    wxGtkFileChooser() { m_ignoreNextFilterEvent = false; }
 
     void SetWidget(GtkFileChooser *w);
 
@@ -48,6 +48,10 @@ public:
     void SetWildcard( const wxString& wildCard );
     void SetFilterIndex( int filterIndex );
 
+    bool HasFilterChoice() const;
+
+    bool ShouldIgnoreNextFilterEvent() const { return m_ignoreNextFilterEvent; }
+
     wxString GetCurrentWildCard() const
        { return m_wildcards[GetFilterIndex()]; }
 
@@ -56,6 +60,10 @@ private:
     // First wildcard in filter, to be used when the user
     // saves a file without giving an extension.
     wxArrayString   m_wildcards;
+
+    // If true, ignore the next event because it was generated by us and not
+    // the user.
+    bool m_ignoreNextFilterEvent;
 };
 
 #if wxUSE_FILECTRL
@@ -109,6 +117,14 @@ public:
 
     virtual bool HasMultipleFileSelection() const { return HasFlag( wxFC_MULTIPLE ); }
     virtual void ShowHidden(bool show);
+
+    virtual bool HasFilterChoice() const
+        { return m_fc.HasFilterChoice(); }
+
+
+    // Implementation only from now on.
+    bool GTKShouldIgnoreNextFilterEvent() const
+        { return m_fc.ShouldIgnoreNextFilterEvent(); }
 
     bool    m_checkNextSelEvent;
     bool    m_ignoreNextFolderChangeEvent;
